Add protected APIs to test authentication

--- a/auth/sample.env
+++ b/auth/sample.env
@@ -1,11 +1,12 @@
-# Database credentials
+# PGPASSWORD is required. 
+# If you didn't set password to db, set random string.
 
-# DB_HOST="<<DB_HOST>>"
-DB_USER="DA_USER_NAME"
-DB_PASSWORD="DB_PASSWORD"
-DB_NAME="DB_NAME"
-# DB_PORT="<<DB_PORT>>"
+# PGDATABASE="mydb"
+# PGHOST="db"
+# PGUSER="totoro"
+PGPASSWORD="randomString"
+# PGPORT="26257"
 
 # Authentication credentials
 TOKEN_TTL="2000"
-JWT_PRIVATE_KEY="THIS_IS_NOT_SO_SECRET+YOU_SHOULD_DEFINITELY_CHANGE_IT"
+JWT_PRIVATE_KEY="SOME_COMPLEX_SECRET"
