--- a/auth/sample.env
+++ b/auth/sample.env
@@ -1,7 +1,9 @@
+HTTP_PORT="8080"
+
 # PGPASSWORD is required. 
 # If you didn't set password to db, set random string.
 
-# PGDATABASE="mydb"
+# PGDATABASE="auth_user_test"
 # PGHOST="db"
 # PGUSER="totoro"
 PGPASSWORD="randomString"
